--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,34 @@
-.maincontent{
-    background-image: url(../images/pexels-pixabay-265685.jpg);
-    background-size: cover;
+body {
+  background-image: url(../images/pexels-pixabay-265685.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+#gamesdiv {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.card-deck {
+  width: 300px;
+}
+
+.renderresult{
+  border: 2px solid white;
+  outline: none;
+  text-align: left;
+  box-shadow: 5px 7px 36px 0px rgba(0,34,0,0.75);
+  border-radius: 10px;
+  margin-right: 20px;
+  margin-bottom: 10px;
+  width: 300px;
+  line-height: 4px;
+  overflow: hidden;
+}
+
+.image{
+  width: inherit;
+  height: auto;
+  object-fit: cover;
 }
