--- a/CSS/style.css
+++ b/CSS/style.css
@@ -4,31 +4,28 @@ body {
   background-size: cover;
 }
 
-#gamesdiv {
+#gamesdiv, #moviesdiv, #booksdiv{
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
 
-.card-deck {
-  width: 300px;
-}
-
 .renderresult{
-  border: 2px solid white;
   outline: none;
   text-align: left;
   box-shadow: 5px 7px 36px 0px rgba(0,34,0,0.75);
   border-radius: 10px;
   margin-right: 20px;
-  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
   width: 300px;
+  padding-bottom: 40px;
   line-height: 4px;
   overflow: hidden;
 }
 
 .image{
-  width: inherit;
-  height: auto;
+  width: 100%;
+  height: 65%;
   object-fit: cover;
 }
